[workspace]
resolver = "2"
# This value defines every rust crate for the project. Each entry must map to
# the path to a crate.
members = [
    "dsc",
    "dsc-bicep-ext",
    "lib/dsc-lib",
    "lib/dsc-lib-jsonschema",
    "lib/dsc-lib-jsonschema-macros",
    "resources/dscecho",
    "lib/dsc-lib-osinfo",
    "resources/osinfo",
    "lib/dsc-lib-pal",
    "resources/process",
    "resources/registry",
    "lib/dsc-lib-registry",
    "resources/runcommandonset",
    "lib/dsc-lib-security_context",
    "resources/sshdconfig",
    "resources/WindowsUpdate",
    "tools/dsctest",
    "tools/test_group_resource",
    "grammars/tree-sitter-dscexpression",
    "grammars/tree-sitter-ssh-server-config",
    "y2j"
]
# This value is modified by the `Set-DefaultWorkspaceMember` helper.
# Be sure to use `Reset-DefaultWorkspaceMember` before committing to
# avoid unintentionally modifying this value.
default-members = [
    "dsc",
    "dsc-bicep-ext",
    "lib/dsc-lib",
    "lib/dsc-lib-jsonschema",
    "lib/dsc-lib-jsonschema-macros",
    "resources/dscecho",
    "lib/dsc-lib-osinfo",
    "resources/osinfo",
    "lib/dsc-lib-pal",
    "resources/process",
    "resources/registry",
    "lib/dsc-lib-registry",
    "resources/runcommandonset",
    "lib/dsc-lib-security_context",
    "resources/sshdconfig",
    "resources/WindowsUpdate",
    "tools/dsctest",
    "tools/test_group_resource",
    "grammars/tree-sitter-dscexpression",
    "grammars/tree-sitter-ssh-server-config",
    "y2j"
]

[workspace.metadata.groups]
# The entries in this table map crates by operating system. Use the helper
# function `Set-DefaultWorkspaceMember` to choose the correct target for your
# current operating system to enable faster builds.
Windows = [
    "dsc",
    "dsc-bicep-ext",
    "lib/dsc-lib",
    "lib/dsc-lib-jsonschema",
    "lib/dsc-lib-jsonschema-macros",
    "resources/dscecho",
    "lib/dsc-lib-osinfo",
    "resources/osinfo",
    "lib/dsc-lib-pal",
    "resources/process",
    "resources/registry",
    "lib/dsc-lib-registry",
    "resources/runcommandonset",
    "lib/dsc-lib-security_context",
    "resources/sshdconfig",
    "resources/WindowsUpdate",
    "tools/dsctest",
    "tools/test_group_resource",
    "grammars/tree-sitter-dscexpression",
    "grammars/tree-sitter-ssh-server-config",
    "y2j"
]
macOS = [
    "dsc",
    "dsc-bicep-ext",
    "lib/dsc-lib",
    "lib/dsc-lib-jsonschema",
    "lib/dsc-lib-jsonschema-macros",
    "resources/dscecho",
    "lib/dsc-lib-osinfo",
    "resources/osinfo",
    "resources/process",
    "resources/runcommandonset",
    "lib/dsc-lib-security_context",
    "resources/sshdconfig",
    "tools/dsctest",
    "tools/test_group_resource",
    "grammars/tree-sitter-dscexpression",
    "grammars/tree-sitter-ssh-server-config",
    "y2j"
]
Linux = [
    "dsc",
    "dsc-bicep-ext",
    "lib/dsc-lib",
    "lib/dsc-lib-jsonschema",
    "lib/dsc-lib-jsonschema-macros",
    "resources/dscecho",
    "lib/dsc-lib-osinfo",
    "resources/osinfo",
    "resources/process",
    "resources/runcommandonset",
    "lib/dsc-lib-security_context",
    "resources/sshdconfig",
    "tools/dsctest",
    "tools/test_group_resource",
    "grammars/tree-sitter-dscexpression",
    "grammars/tree-sitter-ssh-server-config",
    "y2j"
]

[profile.release]
codegen-units = 1           # reduces binary size by ~2%
debug = "full"              # No one needs an undebuggable release binary
lto = true                  # reduces binary size by ~14%
opt-level = "s"             # reduces binary size by ~25%
panic = "abort"             # reduces binary size by ~50% in combination with -Zbuild-std-features=panic_immediate_abort
split-debuginfo = "packed"  # generates a seperate *.dwp/*.dSYM so the binary can get stripped
strip = "symbols"           # See split-debuginfo - allows us to drop the size by ~65%

[workspace.dependencies]
#external dependencies
# dsc-lib
base32 = { version = "0.5" }
# dsc-lib
base64 = { version = "0.22" }
# dsc-lib, sshdconfig
chrono = { version = "0.4" }
# dsc, dsc-lib, dsc-bicep-ext, dscecho, registry, runcommandonset, sshdconfig, dsctest, test_group_resource
clap = { version = "4.5", features = ["derive"] }
# dsc
clap_complete = { version = "4.5" }
# dsc-lib
const-str = {version = "1.0" }
# dsc, registry, dsc-lib-registry, sshdconfig
crossterm = { version = "0.29" }
# dsc
ctrlc = { version = "3.5" }
# dsc-lib-jsonschema-macros
darling = { version = "0.23" }
# dsc-lib
derive_builder = { version = "0.20" }
# dsc, dsc-lib
indicatif = { version = "0.18" }
# dsc-bicep-ext
async-stream = { version = "0.3" }
# dsc-lib-security_context::windows
is_elevated = { version = "0.1" }
# dsc, dsc-lib
jsonschema = { version = "0.38", default-features = false }
# dsc-lib
linked-hash-map = { version = "0.5" }
# dsc-lib
murmurhash64 = { version = "0.3" }
# dsc-lib-security_context::not_windows
nix = { version = "0.30" }
# dsc-lib
num-traits = { version = "0.2" }
# dsc-lib-osinfo
os_info = { version = "3.14" }
# dsc, dsc-lib
path-absolutize = { version = "3.1" }
# dsc-bicep-ext
prost = { version = "0.14" }
# dsc-lib-jsonschema-macros
proc-macro2 = { version = "1.0" }
# dsc-lib-jsonschema-macros
quote = { version = "1.0" }
# dsc, dsc-lib
regex = { version = "1.12" }
# registry, dsc-lib-registry
registry = { version = "1.3" }
# dsc
rmcp = { version = "0.12" }
# dsc_lib
rt-format = { version = "0.3" }
# dsc, dsc-lib, dsc-bicep-ext, dscecho, registry, dsc-lib-registry, runcommandonset, sshdconfig
rust-i18n = { version = "3.1" }
# dsc, dsc-lib, dscecho, registry, dsc-lib-registry, sshdconfig, dsctest, test_group_resource
schemars = { version = "1.2", features = ["preserve_order"] }
# dsc, dsc-lib
semver = { version = "1.0" }
# dsc, dsc-lib, dscecho, dsc-lib-osinfo, process, registry, dsc-lib-registry, runcommandonset, sshdconfig, dsctest, test_group_resource
serde = { version = "1.0", features = ["derive"] }
# dsc, dsc-lib, dscecho, dsc-lib-osinfo, osinfo, process, registry, dsc-lib-registry, runcommandonset, sshdconfig, dsctest, test_group_resource, y2j
serde_json = { version = "1.0", features = ["preserve_order"] }
# dsc, dsc-lib, y2j
serde_yaml = { version = "0.9" }
# dsc-lib-jsonschema-macros
syn = { version = "2.0" }
# dsc, y2j
syntect = { version = "5.3", features = ["default-fancy"], default-features = false }
# dsc, process
sysinfo = { version = "0.37" }
# sshdconfig
tempfile = { version = "3.24" }
# dsc, dsc-lib, registry, dsc-lib-registry, sshdconfig
thiserror = { version = "2.0" }
# dsc, dsc-lib, dsc-bicep-ext
tokio = { version = "1.49" }
# dsc-bicep-ext
tokio-stream = { version = "0.1" }
# dsc
tokio-util = { version = "0.7" }
# dsc-bicep-ext
tonic = { version = "0.14" }
# dsc-bicep-ext
tonic-prost = { version = "0.14" }
# dsc-bicep-ext
tonic-reflection = { version = "0.14" }
# dsc, dsc-lib, dsc-bicep-ext, registry, dsc-lib-registry, runcommandonset, sshdconfig
tracing = { version = "0.1" }
# dsc, dsc-lib
tracing-indicatif = { version = "0.3" }
# dsc, dsc-bicep-ext, registry, dsc-lib-registry, runcommandonset, sshdconfig
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
# dsc-lib, sshdconfig, tree-sitter-dscexpression, tree-sitter-ssh-server-config
tree-sitter = { version = "0.26" }
# tree-sitter-dscexpression, tree-sitter-ssh-server-config
tree-sitter-language = { version = "0.1" }
# dsc-lib, sshdconfig, tree-sitter-dscexpression, tree-sitter-ssh-server-config
tree-sitter-rust = { version = "0.24" }
# registry, dsc-lib-registry
utfx = { version = "0.1" }
# dsc-lib
uuid = { version = "1.19", features = ["v4"] }
# dsc-lib, dsc-lib-jsonschema
url = { version = "2.5" }
# dsc-lib, dsc-lib-jsonschema
urlencoding = { version = "2.1" }
# dsc-lib
which = { version = "8.0" }
# dsc-lib
ipnetwork = { version = "0.21" }
# WindowsUpdate
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_UpdateAgent"
] }

# build-only dependencies
# dsc-lib, dsc-lib-registry, sshdconfig, tree-sitter-dscexpression, tree-sitter-ssh-server-config
cc = { version = "1.2" }
# dsc
tonic-prost-build = { version = "0.14" }

# test-only dependencies
# dsc-lib-jsonschema, dsc-lib
pretty_assertions = { version = "1.4.1" }
# dsc-lib
test-case = { version = "3.3" }

# Workspace crates as dependencies
dsc-lib = { path = "lib/dsc-lib" }
dsc-lib-jsonschema = { path = "lib/dsc-lib-jsonschema" }
dsc-lib-jsonschema-macros = { path = "lib/dsc-lib-jsonschema-macros" }
dsc-lib-osinfo = { path = "lib/dsc-lib-osinfo" }
dsc-lib-security_context = { path = "lib/dsc-lib-security_context" }
tree-sitter-dscexpression = { path = "grammars/tree-sitter-dscexpression" }
dsc-lib-registry = { path = "lib/dsc-lib-registry" }
tree-sitter-ssh-server-config = { path = "grammars/tree-sitter-ssh-server-config" }
