[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = { version = "0.2" }
clap = { version = "3.2", features = ["derive"] }
crossterm = { version = "0.24.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = "1.0"
dsc_lib = { path = "../dsc_lib" }
