[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = { version = "0.2" }
clap = { version = "3.2", features = ["derive"] }
crossterm = { version = "0.24.0" }
dsc_lib = { path = "../dsc_lib" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = { version = "0.9" }
syntect = { version = "5.0", features = ["default-fancy"], default-features = false }
thiserror = "1.0"
