[package]
name = "dsc"
version = "3.2.0-preview.12"
edition = "2021"

[dependencies]
# external dependencies
clap = { workspace = true }
clap_complete = { workspace = true }
crossterm = { workspace = true }
ctrlc = { workspace = true }
indicatif = { workspace = true }
jsonschema = { workspace = true }
path-absolutize = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true, features = [
    "server",
    "macros",
    "transport-io",
    "auth",
    "elicitation",
    "schemars",
] }
rust-i18n = { workspace = true }
schemars = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syntect = { workspace = true }
sysinfo = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-indicatif = { workspace = true }
# workspace crate dependencies
dsc-lib = { workspace = true }
