[package]
name = "dsc_lib"
version = "3.0.0"
edition = "2021"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[dependencies]
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
derive_builder ="0.20"
indicatif = "0.17"
jsonschema = { version = "0.29", default-features = false }
linked-hash-map = "0.5"
num-traits = "0.2"
regex = "1.11"
rust-i18n = { version = "3.1" }
# reqwest = { version = "0.12.8", features = ["native-tls"], default-features = false }
schemars = { version = "0.8", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = { version = "0.9" }
thiserror = "2.0"
security_context_lib = { path = "../security_context_lib" }
semver = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-indicatif = { version = "0.3" }
tree-sitter = "0.25"
tree-sitter-rust = "0.23"
tree-sitter-dscexpression = { path = "../tree-sitter-dscexpression" }
uuid = { version = "1.15", features = ["v4"] }
which = "7.0"

[dev-dependencies]
serde_yaml = "0.9"

[build-dependencies]
cc="1.2"
