[package]
name = "dscbicep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dscbicep"
path = "src/main.rs"

[dependencies]
dsc-lib = { workspace = true }

clap = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "io-std"] }
tokio-stream = { workspace = true, features = ["net"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
