[package]
name = "file_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
digest = "0.10.7"
hex-string = "0.1.0"
schemars = "0.8.15"
serde = "1.0.188"
serde_json = "1.0.107"
sha1 = "0.10.6"
sha2 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.2"
