[package]
name = "ntreg"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[dependencies]
ntapi = { version = "0.4.0" }
ntstatuserror = { path = "../ntstatuserror" }
ntuserinfo = { path = "../ntuserinfo" }
pal = { path = "../pal" }
thiserror = "1.0"

[build-dependencies]
static_vcruntime = "2.0"
