[package]
name = "registry"
version = "1.0.0"
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-us"]
default-locale = "en-us"
load-path = "locales"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
registry = "1.3"
rust-i18n = { version = "3.1" }
schemars = "0.8"
serde = "1.0"
serde_json = "1.0"
thiserror = "2.0"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
utfx = "0.1"

[build-dependencies]
static_vcruntime = "2.0"
