[package]
name = "runcommandonset"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[dependencies]
clap = { version = "4.4", features = ["derive"] }
rust-i18n = { version = "3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["ansi", "env-filter", "json"] }
