[package]
name = "sshdconfig"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[profile.dev]
lto = true

[dependencies]
atty = { version = "0.2" }
chrono = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "2.0" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-ssh-server-config = { path = "./tree-sitter-ssh-server-config" }

[build-dependencies]
cc="*"
