[package]
name = "tree-sitter-dscexpression"
description = "DSCExpression grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "DSCExpression"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/powershell/dsc"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.24.3"

[build-dependencies]
cc = "1.1"
