[package]
name = "tree-sitter-dscexpression"
description = "DSCExpression grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "DSCExpression"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/powershell/dsc"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[dependencies]
tree-sitter-rust = "0.24"
tree-sitter = "0.25"
tree-sitter-language = "0.1"

[build-dependencies]
cc = "*"
