[package]
name = "xtask"
version = "0.0.0"
edition = "2024"

[dependencies]
clap          = { workspace = true }
clap_complete = { workspace = true }
jsonschema    = { workspace = true }
rust-i18n     = { workspace = true }
schemars      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
thiserror     = { workspace = true }
# Workspace dependencies
dsc-lib = { workspace = true }