[package]
name = "registry"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true
# optimize for size
opt-level = 2
# enable link time optimization to remove dead code
lto = true

[profile.dev]
lto = true

[dependencies]
atty = { version = "0.2" }
clap = { version = "4.1", features = ["derive"] }
crossterm = { version = "0.26" }
ntreg = { path = "../ntreg" }
ntstatuserror = { path = "../ntstatuserror" }
schemars = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }

[target.'cfg(onecore)'.dependencies]
pal = { path = "../pal" }

[build-dependencies]
static_vcruntime = "2.0"
